src/ts/tests/fixtures/invalid_service_initializer/non_void_rt.ts
// @ts-nocheck
// InvalidServiceInitializer
@Service
export class FooService {
  init(): number {}
}
